--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -29,13 +29,21 @@
 <div class="row">
   <%= render partial: "host_details" %>
   <%= render partial: "jobs/job_templates" %>
-
-  <div class="col-xs-6">
-    <h3>Config File</h3>
-    <pre class="pre-scrollable">
-<%= @host.baculize_config_no_pass %>
-    </pre>
-  </div>
 </div>
+
+  <div class="row">
+    <div class="col-xs-4">
+      <h3>Client FileDeamon Config</h3>
+      <pre class="pre">
+<%= @host.bacula_fd_filedeamon_config %>
+      </pre>
+    </div>
+    <div class="col-xs-4">
+      <h3>Client Director Config</h3>
+      <pre class="pre">
+<%= @host.bacula_fd_director_config %>
+      </pre>
+    </div>
+  </div>
 
 <%= render partial: 'jobs/modals' %>
