--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,15 +1,24 @@
 <h1>New Job Template</h1>
 
 <div class="row">
-  <div class="col-xs-6">
-    <div class="container graybox">
-      <h3> Job Attributes</h3>
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3> Job Attributes</h3>
+      </div>
+      <br />
+
       <%= render 'form' %>
     </div>
   </div>
-</div>
 
-<br />
+  <div class="col-xs-4">
+    <div id="fileset">
+    </div>
+    <div id="schedule">
+    </div>
+  </div>
+</div>
 
 <div class="row">
   <div class="col-xs-1">
