--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,4 +1,4 @@
-<%= bootstrap_form_for(@schedule, url: host_schedules_path(@host), layout: :horizontal,
+<%= bootstrap_form_for(@schedule, url: url, method: method, layout: :horizontal,
                        label_col: 'col-xs-3', control_col: 'col-xs-8') do |f| %>
   <%= f.text_field :name, required: true %>
 
@@ -13,9 +13,9 @@
     </div>
   <% end %>
 
-  <%= f.fields_for :schedule_runs_attributes, index: nil do |r| %>
+  <%= f.fields_for :schedule_runs, @schedule.schedule_runs do |r| %>
     <div class="schedule_run_form">
-      <%= r.select :level, options_for_select(ScheduleRun.levels.keys) %>
+      <%= r.select :level, options_for_select(ScheduleRun.options_for_select, r.object.level) %>
       <%= r.text_field :month, placeholder: '[month | month-range]' %>
       <p class="col-xs-10 col-xs-offset-1 help-block text-right">eg: jan-mar, feb, monthly</p>
       <%= r.text_field :day, placeholder: '[week | week-range] day | day-range',
@@ -23,7 +23,7 @@
       <p class="col-xs-10 col-xs-offset-1 help-block text-right">
 eg: first sun, second-fifth mon, mon-sat
       </p>
-      <%= r.time_field :time, placeholder: 'HH:MM', required: true %>
+      <%= r.text_field :time, placeholder: 'HH:MM', required: true %>
     </div>
     <hr />
   <% end %>
@@ -39,7 +39,7 @@ eg: first sun, second-fifth mon, mon-sat
     <% end %>
   </div>
 
-  <%= (hidden_field_tag :job_id, @job_id) if @job_id%>
+  <%= (hidden_field_tag :job_id, @job_id) if @job_id %>
 
   <div class="form-group">
     <div class="col-xs-offset-3 col-xs-8">
