--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -45,8 +45,23 @@
           <%= content_tag(:li, active_class(unverified_admin_hosts_path, true)) do %>
             <%= link_to 'Hosts', unverified_admin_hosts_path %>
           <% end %>
-          <%= content_tag(:li, active_class(admin_users_path)) do %>
-            <%= link_to 'Users', admin_users_path %>
+          <%= content_tag(:li, { class: "dropdown #{active_class(admin_users_path)[:class]}" }) do %>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Users <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <%= link_to 'All Users', admin_users_path %>
+              </li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to 'ViMa Users', admin_users_path(type: :vima) %>
+              </li>
+              <li>
+                <%= link_to 'Admins', admin_users_path(type: :admin) %>
+              </li>
+              <li>
+            </ul>
           <% end %>
           <%= content_tag(:li, active_class(admin_settings_path)) do %>
             <%= link_to 'Settings', admin_settings_path %>
