--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,23 +1,34 @@
+<div class="row right">
+  <%= link_to new_admin_user_path, class: "btn btn-default", role: "button" do %>
+    <label class="glyphicon glyphicon-plus text-primary"></label>
+    New Admin
+  <% end %>
+</div>
+
 <h1>Users</h1>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-condensed">
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>username</th>
-        <th>email</th>
-        <th>user type</th>
-        <th>created at</th>
-        <th>clients</th>
-        <th>unverified hosts</th>
-        <th>pending hosts</th>
-        <th>actions</th>
-      </tr>
-    </thead>
+<div class="row">
+  <div class="col-xs-12">
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered table-condensed">
+        <thead>
+          <tr>
+            <th>id</th>
+            <th>username</th>
+            <th>email</th>
+            <th>user type</th>
+            <th>created at</th>
+            <th>clients</th>
+            <th>unverified hosts</th>
+            <th>pending hosts</th>
+            <th>actions</th>
+          </tr>
+        </thead>
 
-    <tbody>
-      <%= render partial: 'user', collection: @users %>
-    </tbody>
-  </table>
+        <tbody>
+          <%= render partial: 'user', collection: @users %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
