Add basic Shibboleth strategy

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -17,7 +17,7 @@
     <hr />
     <div class="row">
       <div class="col-xs-4 col-xs-offset-4 text-center">
-        <%= link_to 'Institutional User', '', role: :button,
+        <%= link_to 'Institutional User', institutional_path, role: :button,
           class: 'btn btn-default btn-lg',
           disabled: !Archiving.settings[:institutional_authentication_enabled] %>
       </div>
