--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="col-xs-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3>New Admin</h3>
+        <h3>Edit Admin</h3>
 
         <%= render partial: 'form' %>
       </div>
