--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -14,14 +14,15 @@
         <thead>
           <tr>
             <th>id</th>
-            <th>username</th>
-            <th>email</th>
-            <th>user type</th>
-            <th>created at</th>
-            <th>clients</th>
-            <th>unverified hosts</th>
-            <th>pending hosts</th>
-            <th>actions</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>User type</th>
+            <th>Created at</th>
+            <th>Clients</th>
+            <th>Unverified hosts</th>
+            <th>Pending hosts</th>
+            <th>Actions</th>
+            <th>Ban</th>
           </tr>
         </thead>
 
