--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -58,6 +58,9 @@
                 <%= link_to 'ViMa Users', admin_users_path(type: :vima) %>
               </li>
               <li>
+                <%= link_to 'Institutional Users', admin_users_path(type: :institutional) %>
+              </li>
+              <li>
                 <%= link_to 'Admins', admin_users_path(type: :admin) %>
               </li>
               <li>
