Display JobId in logs
resolves Issue #21

--- a/app/views/admin/clients/logs.html.erb
+++ b/app/views/admin/clients/logs.html.erb
@@ -22,6 +22,7 @@
         <thead>
           <tr>
             <th>LogId</th>
+            <th>JobId<th>
             <th>Job</th>
             <th>Time</th>
             <th>Text</th>
