--- a/app/views/admin/clients/_log.html.erb
+++ b/app/views/admin/clients/_log.html.erb
@@ -1,5 +1,6 @@
 <tr>
   <td><%= log.log_id %></td>
+  <td><%= log.job.id %></td>
   <td><%= log.job.name %></td>
   <td><%= log.time_formatted %></td>
   <td style='max-width: 650px'><pre class='pre-scrollable'>
