--- a/app/views/admin/clients/show.html.erb
+++ b/app/views/admin/clients/show.html.erb
@@ -1,11 +1,24 @@
 <%= render partial: 'header' %>
 
 <div class="row right">
-  <% if !@client.host.inactive? %>
+  <% if @client.host.can_set_inactive? %>
     <%= link_to 'Disable client', disable_admin_client_path(@client), method: :post,
       data: { confirm: 'This will disable the client. Are you sure?' },
       class: "btn btn-warning", role: "button" %>
   <% end %>
+
+  <% if @client.host.can_block? %>
+    <%= link_to 'Lock client', block_admin_client_path(@client), method: :post,
+      data: { confirm: 'This will disable and lock the client. Are you sure?' },
+      class: "btn btn-warning", role: "button" %>
+  <% end %>
+
+  <% if @client.host.blocked? %>
+    <%= link_to 'Unlock client', unblock_admin_client_path(@client), method: :post,
+      data: { confirm: 'This will unlock the client. Are you sure?' },
+      class: "btn btn-warning", role: "button" %>
+  <% end %>
+
   <%= link_to 'Remove client', revoke_admin_client_path(@client), method: :delete,
     data: { confirm: 'This will REMOVE the client from Bacula. Are you sure?' },
     class: "btn btn-danger", role: "button" %>
