--- a/app/views/jobs/_fileset.html.erb
+++ b/app/views/jobs/_fileset.html.erb
@@ -1,6 +1,17 @@
+<% if job_id = (@job.try(:id) || @job_id) %>
+  <% url_options = { job_id: job_id } %>
+<% else %>
+  <% url_options = {} %>
+<% end %>
+
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4>Fileset "<%= fileset.name %>"</h4>
+    <h4>
+      Fileset "<%= fileset.name %>"
+      <%= link_to edit_host_fileset_path(@host, fileset.id, url_options) do %>
+        <label class="glyphicon glyphicon-edit text-primary right"></label>
+      <% end %>
+    </h4>
   </div>
   <br />
   <pre>
