--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -9,6 +9,8 @@
       <br />
       <%= render 'form' %>
     </div>
+    <%= link_to 'Cancel', host_job_path(@host, @job), class: 'btn btn-danger right',
+                role: 'button' %>
   </div>
 
   <div class="col-xs-4">
@@ -20,13 +22,5 @@
       <% schedule = @schedule || @job.schedule %>
       <%= render partial: 'schedule', locals: { schedule: schedule } if schedule %>
     </div>
-  </div>
-</div>
-
-<br />
-
-<div class="row">
-  <div class="col-xs-1">
-    <%= link_to 'Cancel', host_job_path(@host, @job), class: 'btn btn-danger', role: 'button' %>
   </div>
 </div>
