--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -18,6 +18,7 @@
             <th>Email</th>
             <th>User type</th>
             <th>Created at</th>
+            <th>Last login at</th>
             <th>Clients</th>
             <th>Unverified hosts</th>
             <th>Pending hosts</th>
