--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -66,6 +66,9 @@
               <li>
             </ul>
           <% end %>
+          <%= content_tag(:li, active_class(admin_pools_path)) do %>
+            <%= link_to 'Pools', admin_pools_path %>
+          <% end %>
           <%= content_tag(:li, active_class(admin_settings_path)) do %>
             <%= link_to 'Settings', admin_settings_path %>
           <% end %>
