--- a/app/views/clients/_users.html.erb
+++ b/app/views/clients/_users.html.erb
@@ -5,6 +5,7 @@
         <tr>
           <th>Username</th>
           <th>Email</th>
+          <th>Actions</th>
         </tr>
       </thead>
       <tbody>
