--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require bootstrap.min
  *= require jstree-default
+ *= require bootstrap-chosen
  *= require_tree .
  *= require_self
  */
