--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,7 +1,13 @@
-<h1>New Host</h1>
-
-<div class="container graybox">
-  <%= render 'form' %>
+<div class="row">
+  <div class="col-xs-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3>New Host</h3>
+      </div>
+      <br />
+      <%= render 'form' %>
+    </div>
+  </div>
 </div>
 
 <%= link_to 'Back', clients_path %>
