--- a/app/views/clients/_client_graphs.html.erb
+++ b/app/views/clients/_client_graphs.html.erb
@@ -14,5 +14,5 @@
   </div>
 </div>
 
-<%= baas_chart('jobs_status', @job_status) %>
-<%= baas_chart('jobs_stats', @job_stats) %>
+<%= archiving_chart('jobs_status', @job_status) %>
+<%= archiving_chart('jobs_stats', @job_stats) %>
