--- a/app/views/admin/clients/index.html.erb
+++ b/app/views/admin/clients/index.html.erb
@@ -1,24 +1,26 @@
 <h1>Bacula Clients</h1>
 
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-condensed">
-    <thead>
-      <tr>
-        <th>ClientId</th>
-        <th>Name</th>
-        <th>Uname</th>
-        <th>Active Jobs</th>
-        <th>Last Backup</th>
-        <th>FileRetention (days)</th>
-        <th>JobRetention (days)</th>
-        <th>Space Used</th>
-        <th>File count</th>
-        <th>AutoPrune</th>
-      </tr>
-    </thead>
+<div class="datatable-wrapper">
+  <div class="table-responsive">
+    <table id="admin_clients" class="table table-striped table-bordered table-condensed">
+      <thead>
+        <tr>
+          <th class="no-search">ClientId</th>
+          <th>Name</th>
+          <th>Uname</th>
+          <th class="no-search">Active Jobs</th>
+          <th class="no-search">Last Backup</th>
+          <th class="no-search">FileRetention (days)</th>
+          <th class="no-search">JobRetention (days)</th>
+          <th class="no-search">Space Used</th>
+          <th class="no-search">File count</th>
+          <th class="neither-search-nor-order">AutoPrune</th>
+        </tr>
+      </thead>
 
-    <tbody>
-      <%= render partial: 'client', collection: @clients %>
-    </tbody>
-  </table>
+      <tbody>
+        <%= render partial: 'client', collection: @clients %>
+      </tbody>
+    </table>
+  </div>
 </div>
