Display client's origin to /admin/clients

--- a/app/views/admin/clients/_client.html.erb
+++ b/app/views/admin/clients/_client.html.erb
@@ -2,6 +2,7 @@
   <td><%= link_to_if client.host.present?, "##{client.id}", admin_client_path(client) %></td>
   <td><%= link_to_if client.host.present?, client.name, admin_client_path(client) %></td>
   <td><%= client.uname %></td>
+  <td><%= client.host.try(:origin) %></td>
   <td><%= @stats.active_jobs[client.id] || 0 %></td>
   <td><%= @stats.last_jobs[client.id] %></td>
   <td><%= client.file_retention_days %></td>
