--- a/app/views/admin/clients/index.html.erb
+++ b/app/views/admin/clients/index.html.erb
@@ -8,6 +8,7 @@
           <th class="no-search">ClientId</th>
           <th>Name</th>
           <th>Uname</th>
+          <th>Client Type</th>
           <th class="no-search">Active Jobs</th>
           <th class="no-search">Last Backup</th>
           <th class="no-search">FileRetention (days)</th>
