--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,12 @@
-<h1>Archiving</h1>
+<div class="row">
+  <div class="col-xs-4 text-right right">
+    <%= bootstrap_form_tag(url: admin_path, method: :post, layout: :inline) do |f| %>
+      <%= f.select(:days_back, [['1 week', 7], ['2 weeks', 14], ['1 month', 30]], selected: params[:days_back]) %>
+      <%= f.submit 'See Stats', class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
+
+<br />
 
 <%= render partial: 'clients/client_graphs', locals: { path: admin_path } %>
