--- a/app/views/clients/_client_graphs.html.erb
+++ b/app/views/clients/_client_graphs.html.erb
@@ -1,16 +1,30 @@
-<br />
 <div class='row'>
+  <% if @global_stats.present? %>
+    <div class='col-xs-3'>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4>Global Stats</h4>
+        </div>
+
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered table-condensed">
+            <% @global_stats.each do |name, value| %>
+              <tr>
+                <td><%= name.to_s.titleize %></td>
+                <td><b><%= value %></b></td>
+              </tr>
+            <% end %>
+          </table>
+        </div>
+      </div>
+    </div>
+  <% end %>
+
   <div class="col-xs-4">
     <div id="jobs_status"></div>
   </div>
   <div class="col-xs-4">
     <div id="jobs_stats"></div>
-  </div>
-  <div class="col-xs-4">
-    <%= bootstrap_form_tag(url: path, method: :post, layout: :inline) do |f| %>
-      <%= f.select(:days_back, [['1 week', 7], ['2 weeks', 14], ['1 month', 30]], selected: params[:days_back]) %>
-      <%= f.submit 'See Stats', class: "btn btn-primary" %>
-    <% end %>
   </div>
 </div>
 
