Remove obsolete host handling from admin

--- a/app/views/admin/hosts/_host.html.erb
+++ b/app/views/admin/hosts/_host.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td><%= link_to host.name, admin_host_path(host) %></td>
+  <td><%= host.name %></td>
   <td><%= host.fqdn %></td>
   <td><%= host.first_user.display_name %></td>
   <td><%= host.port %></td>
