--- a/app/views/shared/_admin.html.erb
+++ b/app/views/shared/_admin.html.erb
@@ -29,6 +29,9 @@
       <li>
     </ul>
   <% end %>
+  <%= content_tag(:li, active_class(admin_faqs_path)) do %>
+    <%= link_to 'FAQ', admin_faqs_path %>
+  <% end %>
   <%= content_tag(:li, active_class(admin_pools_path)) do %>
     <%= link_to 'Pools', admin_pools_path %>
   <% end %>
