Enhance message resource names
The should be somewhat cryptic because they are supposed to be added by
the user in the fd configuration file.

--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -44,6 +44,13 @@
 <%= @host.bacula_fd_director_config %>
       </pre>
     </div>
+    <div class="col-xs-4">
+      <h3>Client Messages Config</h3>
+      <pre class="pre">
+<%= @host.bacula_fd_messages_config %>
+      </pre>
+    </div>
+
   </div>
 
 <%= render partial: 'jobs/modals' %>
