Provide info for data compression and encryption in jobs listing.
Fixes T257

Data will be visible to both administrators and users.

--- a/app/views/admin/clients/_recent_jobs.html.erb
+++ b/app/views/admin/clients/_recent_jobs.html.erb
@@ -12,6 +12,8 @@
           <th>Bytes</th>
           <th>Files</th>
           <th>Status</th>
+          <th>Encryption</th>
+          <th>Compression</th>
         </tr>
       </thead>
       <tbody>
