--- a/app/views/clients/_recent_job.html.erb
+++ b/app/views/clients/_recent_job.html.erb
@@ -7,5 +7,7 @@
   <td><%= recent_job.end_time_formatted %></td>
   <td><%= number_to_human_size(recent_job.job_bytes) %></td>
   <td><%= number_by_magnitude(recent_job.job_files) %></td>
-  <td><%= recent_job.status_human %>
+  <td><%= recent_job.status_human %></td>
+  <td><%= recent_job.encryption %></td>
+  <td><%= recent_job.compression %></td>
 </tr>
