--- a/app/views/clients/_recent_jobs.html.erb
+++ b/app/views/clients/_recent_jobs.html.erb
@@ -12,6 +12,8 @@
           <th>Bytes</th>
           <th>Files</th>
           <th>Status</th>
+          <th>Encryption</th>
+          <th>Compression</th>
         </tr>
       </thead>
       <tbody>
