--- a/app/views/kaminari/_gap.html.erb
+++ b/app/views/kaminari/_gap.html.erb
@@ -6,5 +6,5 @@
     remote:        data-remote
 -%>
 <li>
-  <span class="page gap"><%= t('views.pagination.truncate').html_safe %></span>
+  <span class="page gap">. . .</span>
 </li>
