--- a/app/views/hosts/_form.html.erb
+++ b/app/views/hosts/_form.html.erb
@@ -8,7 +8,7 @@
     <% else %>
       <%= f.text_field :fqdn, disabled: @host.persisted? %>
     <% end %>
-    <%= f.password_field :password, required: true %>
+    <%= f.password_field :password, required: true, value: @host.password %>
     <%= f.number_field :port, min: 1 %>
     <% emails = (@host.users.pluck(:email) + @host.email_recipients).uniq.select(&:present?) %>
     <%= f.select :email_recipients, options_for_select(emails, @host.email_recipients), {},
