--- a/app/views/admin/clients/_recent_jobs.html.erb
+++ b/app/views/admin/clients/_recent_jobs.html.erb
@@ -9,6 +9,7 @@
           <th>Fileset</th>
           <th>Started At</th>
           <th>Finished At</th>
+          <th>Duration</th>
           <th>Bytes</th>
           <th>Files</th>
           <th>Status</th>
