--- a/app/views/clients/_recent_job.html.erb
+++ b/app/views/clients/_recent_job.html.erb
@@ -5,6 +5,7 @@
   <td><%= recent_job.fileset %></td>
   <td><%= recent_job.start_time_formatted %></td>
   <td><%= recent_job.end_time_formatted %></td>
+  <td><%= recent_job.duration %></td>
   <td><%= number_to_human_size(recent_job.job_bytes) %></td>
   <td><%= number_by_magnitude(recent_job.job_files) %></td>
   <td><%= recent_job.status_human %></td>
