--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -15,6 +15,7 @@
         <th>FileRetention (days)</th>
         <th>JobRetention (days)</th>
         <th>Space Used</th>
+        <th>Space Used %</th>
         <th>File count</th>
         <th>AutoPrune</th>
       </tr>
