--- a/app/views/admin/clients/index.html.erb
+++ b/app/views/admin/clients/index.html.erb
@@ -14,6 +14,7 @@
           <th class="no-search">FileRetention (days)</th>
           <th class="no-search">JobRetention (days)</th>
           <th class="no-search">Space Used</th>
+          <th class="no-search">Space Used %</th>
           <th class="no-search">File count</th>
           <th class="neither-search-nor-order">AutoPrune</th>
         </tr>
